Changing startup sessions and colors.

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -29,16 +29,29 @@ font_size 9.0
 disable_ligatures cursor
 
 window_padding_width 8 10
+window_border_width 1px
+
+active_border_color #EBDDAA
+inactive_border_color #C3BAC6
 
 background_opacity 1.0
+dynamic_background_opacity yes
+dim_opacity 0.75
 
 tab_bar_style separator
+tab_bar_margin_height 6.0 0.0
+tab_bar_margin_width 4.0
 tab_separator " "
 tab_title_template "  {title} "
 active_tab_title_template "{fmt.bold}  {title} {fmt.nobold}"
 tab_bar_background none
 active_tab_font_style = italic
 inactive_tab_font_style = italic
+
+window_resize_step_cells 20
+window_resize_step_lines 20
+
+enabled_layouts horizontal,vertical,tall,grid
 
 #
 # BEHAVIOR
@@ -49,8 +62,9 @@ linux_display_server wayland
 allow_remote_control yes
 listen_on unix:@mykitty
 
-wheel_scroll_multiplier 10.0
-touch_scroll_multiplier 2.0
+# On Wayland, touch scroll is also used for mice
+wheel_scroll_multiplier 5.0
+touch_scroll_multiplier 5.0
 scrollback_pager_history_size 2.0 
 
 enable_audio_bell no
@@ -63,9 +77,26 @@ select_by_word_characters @-./_~?&=%+#
 
 editor nvim
 
+# nvim scrollback pager, redit to page-down on GitHub:
+# https://github.com/kovidgoyal/kitty/issues/719#issuecomment-952039731
+scrollback_pager bash -c "exec nvim 63<&0 0</dev/null -c 'map <silent> q :qa!<CR>' -c 'set shell=bash scrollback=100000 termguicolors laststatus=2' -c 'autocmd TermEnter * stopinsert' -c 'autocmd TermClose * call cursor(max([0,INPUT_LINE_NUMBER-1])+CURSOR_LINE, CURSOR_COLUMN)' -c 'terminal sed </dev/fd/63 -e \"s/'$'\x1b'']8;;file:[^\]*[\]//g\" && sleep 0.01 && printf \"'$'\x1b'']2;\"'"
+
 #
 # MAPS
 #
+
+# Config
+
+map kitty_mod+f1 launch firefox https://sw.kovidgoyal.net/kitty
+map f1 launch firefox https://sw.kovidgoyal.net/kitty
+map kitty_mod+f2 set_tab_title
+map kitty_mod+f5 load_config_file /etc/nixos/config/kitty/kitty.conf
+
+map f2 set_tab_title
+map f5 load_config_file
+map f6 debug_config
+
+map kitty_mod+alt+u kitten unicode_input
 
 # Mouse actions
 
@@ -102,20 +133,25 @@ map kitty_mod+w>n new_window_with_cwd
 map kitty_mod+w>N new_window_with_cwd
 map kitty_mod+w>s launch --cwd=current --location=hsplit
 map kitty_mod+w>v launch --cwd=current --location=vsplit
+
 map kitty_mod+w>h neighboring_window left
 map kitty_mod+w>j neighboring_window bottom
 map kitty_mod+w>k neighboring_window top
 map kitty_mod+w>l neighboring_window right
-map kitty_mod+w>< narrower 20 
-map kitty_mod+w>> wider 20
-map kitty_mod+w>+ taller 20 
-map kitty_mod+w>< shorter 20 
-map kitty_mod+w>= reset_window_sizes
-map kitty_mod+w>r start_resizing_window
+
+map kitty_mod+w>r>r start_resizing_window
+map kitty_mod+w>r>h resize_window narrower 20
+map kitty_mod+w>r>l resize_window wider 20
+map kitty_mod+w>r>k resize_window taller 20
+map kitty_mod+w>r>j resize_window shorter 20
+map kitty_mod+w>plus resize_window taller 20
+map kitty_mod+w>minus resize_window shorter 20
+map kitty_mod+w>equal reset_window_sizes
+
 map kitty_mod+w>c close_window
-map kitty_mod+w>q close_window
 
 # W prefix key held
+
 map kitty_mod+w>kitty_mod+w nth_window -1
 map kitty_mod+w>kitty_mod+n new_window_with_cwd
 map kitty_mod+w>kitty_mod+N new_window_with_cwd
@@ -125,16 +161,39 @@ map kitty_mod+w>kitty_mod+h neighboring_window left
 map kitty_mod+w>kitty_mod+j neighboring_window bottom
 map kitty_mod+w>kitty_mod+k neighboring_window top
 map kitty_mod+w>kitty_mod+l neighboring_window right
-map kitty_mod+w>kitty_mod+< narrower 20 
-map kitty_mod+w>kitty_mod+> wider 20
-map kitty_mod+w>kitty_mod++ taller 20 
-map kitty_mod+w>kitty_mod+< shorter 20 
-map kitty_mod+w>kitty_mod+= reset_window_sizes
-map kitty_mod+w>kitty_mod+r start_resizing_window
+map kitty_mod+w>kitty_mod+r>kitty_mod+h resize_window narrower 20
+map kitty_mod+w>kitty_mod+r>kitty_mod+l resize_window wider 20
+map kitty_mod+w>kitty_mod+r>kitty_mod+k resize_window taller 20
+map kitty_mod+w>kitty_mod+r>kitty_mod+j resize_window shorter 20
+map kitty_mod+w>kitty_mod+r>kitty_mod+r start_resizing_window
+map kitty_mod+w>kitty_mod+equal reset_window_sizes
 map kitty_mod+w>kitty_mod+c close_window
-map kitty_mod+w>kitty_mod+q close_window
+
+# Tab navigation
+
+map kitty_mod+t>c close_tab
+map kitty_mod+t>kitty_mod+c close_tab
+map kitty_mod+t>n new_tab !neighbor
+map kitty_mod+t>kitty_mod+n new_tab !neighbor
+map kitty_mod+t>t goto_tab -1
+map kitty_mod+t>kitty_mod+t goto_tab -1
+map kitty_mod+t>h previous_tab
+map kitty_mod+t>kitty_mod+h previous_tab
+map kitty_mod+t>l next_tab
+map kitty_mod+t>kitty_mod+l next_tab
+map kitty_mod+t>r set_tab_title
+map kitty_mod+t>kitty_mod+r set_tab_title
+map kitty_mod+t>j move_tab_backward
+map kitty_mod+t>kitty_mod+j move_tab_backward
+map kitty_mod+t>k move_tab_forward
+map kitty_mod+t>kitty_mod+k move_tab_forward
+map kitty_mod+alt+t>h move_tab_backward
+map kitty_mod+alt+t>kitty_mod+alt+h move_tab_backward
+map kitty_mod+alt+t>l move_tab_forward
+map kitty_mod+alt+t>kitty_mod+alt+l move_tab_forward
 
 # Seamless nvim <-> kitty navigation
+
 map ctrl+h kitten pass_keys.py neighboring_window left ctrl+h
 map ctrl+j kitten pass_keys.py neighboring_window bottom ctrl+j
 map ctrl+k kitten pass_keys.py neighboring_window top ctrl+k
@@ -144,6 +203,9 @@ map ctrl+l kitten pass_keys.py neighboring_window right ctrl+l
 
 map kitty_mod+u scroll_page_up
 map kitty_mod+d scroll_page_down
+
+map kitty_mod+up scroll_page_up
+map kitty_mod+down scroll_page_down
 
 #
 # Remapping overlapping defaults from kitty_mod+key to kitty_mod+alt+key
