--- a/config/waybar/config
+++ b/config/waybar/config
@@ -6,6 +6,7 @@
   "width": 1920,
   "modules-left": [
     "sway/workspaces",
+    "sway/window",
     "custom/files",
     "custom/browser",
     "custom/mail",
@@ -21,6 +22,15 @@
     "custom/wttr",
     "pulseaudio"
   ],
+  "sway/window": {
+    "format": "{}",
+    "max-length": 50,
+    "rewrite": {
+      "(.*)Firefox Nightly": " $1",
+      "(.*) - vim": " $1",
+      "(.*) - zsh": " [$1]"
+    }
+  },
   "custom/separator": {
     "format": "·",
     "tooltip": false
@@ -29,13 +39,27 @@
     "format": "{}"
   },
   "sway/workspaces": {
+    "format": "{icon}",
+    "format-icons": {
+      /* "1": "", */
+      "focused": "",
+      "default": "﬿",
+      "urgent": "",
+    },
+    "strip_workspace_numbers": true,
+    "enable-bar-scroll": true,
+    "current-only": false,
     "persistent_workspaces": {
       "1": ["DP-1"],
       "2": ["DP-1"],
       "3": ["DP-1"],
-      "4": ["DVI-D-1"],
-      "5": ["DVI-D-1"],
-      "6": ["DVI-D-1"]
+      "4": ["DP-1"],
+      "5": ["DP-1"],
+      "6": ["DVI-D-1"],
+      "7": ["DVI-D-1"],
+      "8": ["DVI-D-1"],
+      "9": ["DVI-D-1"],
+      "10": ["DVI-D-1"]
     }
   },
   "tray": {
@@ -99,6 +123,11 @@
     "on-click": "kitty --class popupterm gotop",
     "tooltip": true,
     "tooltip-format": "{used} / {total}"
+  },
+   "custom/snap": {
+    "format": "<span font='11' rise='-1500'></span>",
+    "on-click": "grim -g \"$(slurp)\" \"$HOME/Pictures/Screenshots/$(date +%Y%m%d_%Hh%Mm%Ss)_area.png\"",
+    "tooltip": false
   },
    "custom/tmpmail": {
     "interval": 30,
