--- a/config/sway/config
+++ b/config/sway/config
@@ -1,475 +1,1 @@
-##
-# SWAY WINDOW MANAGER
-##
-
-#
-# VARIABLES
-#
-
-#
-# Appearance
-#
-
-set $font Input Sans Condensed 9
-set $colors catpuccin
-
-#
-# Keys
-#
-
-set $mod Mod4
-
-set $left h
-set $down j
-set $up k
-set $right l
-
-#
-# Workspaces
-#
-
-set $workspace1 1
-set $workspace2 2
-set $workspace3 3
-set $workspace4 4
-set $workspace5 5
-set $workspace6 6
-set $workspace7 7
-set $workspace8 8
-set $workspace9 9
-set $workspace10 10
-
-#
-# Commands
-#
-
-set $term kitty --single-instance
-set $scratchterm $term --class=scratchterm
-set $menu wofi
-set $menuargs --show=drun,run
-set $files dolphin
-set $snaparea grim -g "$(slurp)" "$HOME/Pictures/Screenshots/$(date +%Y%m%d_%Hh%Mm%Ss)_area.png"
-set $snapfull grim -o "$(slurp -o -f '%o')" "$HOME/Pictures/Screenshots/$(date +%Y%m%d_%Hh%Mm%Ss)_screen.png"
-
-set $lock swaylock \
-  --font "Input Sans Compressed" \
-  --font-size 12 \
-  --scaling fill \
-  --ignore-empty-password \
-  --indicator-radius 150 \
-  --indicator-thickness 10 \
-  --inside-color "#2e3440" \
-  --inside-ver-color "#2e3440" \
-  --key-hl-color "#88c0d0" \
-  --ring-color "#2e3440" \
-  --ring-ver-color "#2e3440" \
-  --separator-color "#2e3440" \
-  --line-uses-inside \
-  --layout-bg-color "#00000000" \
-  --layout-border-color "#00000000" \
-  --layout-text-color "#eceff4" \
-  --clock \
-  --screenshots \
-  --indicator-idle-visible \
-  --datestr "%H:%M" \
-  --timestr "%A" \
-  --grace 1 \
-  --fade-in 1 \
-  --effect-greyscale \
-  --effect-blur 6x8 \
-  --effect-vignette 0.6:0.8
-
-set $powermenu wlogout \
-  --buttons-per-row 2 \
-  --row-spacing 34 \
-  --column-spacing 34 \
-  --margin 34 \
-  --protocol layer-shell
-
-#
-# SETTINGS
-#
-
-#
-# Appearance
-#
-
-font pango:$font
-
-# Gaps
-
-gaps inner 14
-gaps outer 12
-
-smart_gaps off
-
-# Borders (pixel disables title bar)
-
-default_border pixel 2
-default_floating_border pixel 2
-
-hide_edge_borders smart_no_gaps
-
-#
-# Workspaces
-#
-
-# Show next if attempting to focus outside current
-focus_wrapping workspace
-
-# Show previous if repeating Mod+Number
-workspace_auto_back_and_forth yes
-
-# Assign to outputs
-workspace $workspace1 output DP-1
-workspace $workspace2 output DP-1
-workspace $workspace3 output DP-1
-workspace $workspace4 output DP-1
-workspace $workspace5 output DP-1
-workspace $workspace6 output DVI-D-1
-workspace $workspace7 output DVI-D-1
-workspace $workspace8 output DVI-D-1
-workspace $workspace9 output DVI-D-1
-workspace $workspace10 output DVI-D-1
-
-#
-# OUTPUTS
-#
-
-# All monitors
-output "*" bg ~/Pictures/Wallpapers/active.jpg fill
-
-# Primary monitor
-output "DP-1" {
-  mode 1920x1080@144.001007Hz
-  position 1920,0
-}
-
-# Secondary monitor
-output "DVI-D-1" {
-  mode 1920x1080@60Hz
-  position 0,0
-}
-
-#
-# INPUTS
-# 
-# Notes:
-#   - Using ID instead of "*" can prevent Firefox from crashing on configuration reload
-#
-
-seat seat0 hide_cursor when-typing enable
-seat seat0 xcursor_theme "Quintom_Snow" 24
-
-input "12851:25345:Ducky_Ducky_One2_Mini_RGB" {
-  repeat_delay 250
-  repeat_rate 35
-
-  xkb_layout us,se
-
-  # CapsLock -> Escape
-  # LShift+RShift -> CapsLock
-  # LCtrl+RCtrl -> Switch layout
-  # RAlt -> AltGr
-  # Shift+RAlt -> Compose
-  xkb_options caps:escape,shift:both_capslock,grp:ctrls_toggle,lv3:ralt_switch_multikey
-}
-
-input "1452:613:Apple_Inc._Magic_Trackpad_2" {
-  tap enable
-  click_method clickfinger
-}
-
-#
-# KEY MAPS
-#
-
-# Drag windows by holding down $mod and left mouse button.
-# Resize with right mouse button + $mod.
-# Change normal to inverse to use left button for resizing.
-floating_modifier $mod normal
-
-# To map single press on mod key to launch menu:
-# set $modrelease (pgrep $menu 1>/dev/null 2>&1 && pkill $menu) || $menu $menuargs | xargs swaymsg exec
-
-bindsym {
-  #
-  # Launch
-  #
-
-  $mod+Return exec $term
-  $mod+d exec $menu | xargs swaymsg exec --
-  $mod+g exec $files
-  $mod+Backspace exec $powermenu
-
-  $mod+q kill
-  $mod+Shift+q kill
-  $mod+Shift+c reload
-
-  #
-  # Movement
-  #
-
-  # Focus windows
-
-  $mod+$left focus left
-  $mod+$down focus down
-  $mod+$up focus up
-  $mod+$right focus right
-
-  # Move windows
-
-  $mod+Shift+$left move left
-  $mod+Shift+$down move down
-  $mod+Shift+$up move up
-  $mod+Shift+$right move right
-
-  # Focus workspace: Number keys
-
-  $mod+1 workspace $workspace1
-  $mod+2 workspace $workspace2
-  $mod+3 workspace $workspace3
-  $mod+4 workspace $workspace4
-  $mod+5 workspace $workspace5
-  $mod+6 workspace $workspace6
-  $mod+7 workspace $workspace7
-  $mod+8 workspace $workspace8
-  $mod+9 workspace $workspace9
-  $mod+0 workspace $workspace10
-
-  # Focus workspace: Mod+Tab switches, Alt+Tab cycles
-
-  $mod+Tab workspace back_and_forth
-
-  Alt+Tab workspace next_on_output
-  Alt+Shift+Tab workspace prev_on_output
-
-  # Focus workspace: HJKL
-  
-  $mod+Alt+$left workspace prev_on_output
-  $mod+Alt+$down workspace next_on_output
-  $mod+Alt+$up workspace prev_on_output
-  $mod+Alt+$right workspace next_on_output
-
-  # Move window to workspace and focus
-
-  $mod+Shift+1 move container to workspace number 1
-  $mod+Shift+2 move container to workspace number 2
-  $mod+Shift+3 move container to workspace number 3
-  $mod+Shift+4 move container to workspace number 4
-  $mod+Shift+5 move container to workspace number 5
-  $mod+Shift+6 move container to workspace number 6
-  $mod+Shift+7 move container to workspace number 7
-  $mod+Shift+8 move container to workspace number 8
-  $mod+Shift+9 move container to workspace number 9
-  $mod+Shift+0 move container to workspace number 10
-
-  #
-  # Layout 
-  #
-  
-  # Split direction
-
-  $mod+b splith
-  $mod+v splitv
-
-  # Modes
-  
-  $mod+s layout stacking
-  $mod+w layout tabbed
-  $mod+e layout toggle split
-
-  # Fullscreen
-  
-  $mod+f fullscreen
-  $mod+Shift+Space floating toggle
-  $mod+Space focus mode_toggle
-  $mod+a focus parent
-
-  #
-  # Scratchpad
-  #
-  
-  $mod+Shift+z mark --add __fs, move scratchpad, scratchpad show
-  $mod+z scratchpad show; [con_mark="^__fs$"] fullscreen enable
-  $mod+Shift+Ctrl+x fullscreen disable, unmark 
-  $mod+Shift+Ctrl+z fullscreen enable, mark --add __fs
-
-  #
-  # Functional
-  #
-
-  # Audio
-  
-  XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-  XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-  XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
-}
-
-#
-# NAVIGATION MODE
-#
-
-set $mode_navigation Navigate
-
-mode "$mode_navigation" {
-  bindsym {
-    h exec wtype -k left
-    j exec wtype -k down
-    k exec wtype -k up
-    l exec wtype -k right
-  }
-
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-  bindsym Space mode "default"
-}
-
-bindsym $mod+n mode "$mode_navigation"
-
-#
-# SCREENSHOT MODE
-#   a -> select area
-#   s -> select screen
-#   PrintSc -> select area (PrintSc > PrintSc)
-#
-
-set $mode_screenshot Screenshot
-
-mode "$mode_screenshot" {
-  bindsym Print exec swaymsg mode "default" && $snaparea
-  bindsym a exec swaymsg mode "default" && $snaparea
-  bindsym s exec swaymsg mode "default" && $snapfull
-
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-  bindsym Space mode "default"
-}
-
-bindsym Print mode "$mode_screenshot"
-
-#
-# RESIZE MODE
-#
-
-set $mode_resize Resize
-
-mode "$mode_resize" {
-  bindsym $left resize shrink width 20px
-  bindsym $down resize grow height 20px
-  bindsym $up resize shrink height 20px
-  bindsym $right resize grow width 20px
-
-  bindsym Left resize shrink width 20px
-  bindsym Down resize grow height 20px
-  bindsym Up resize shrink height 20px
-  bindsym Right resize grow width 20px
-
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-  bindsym Space mode "default"
-}
-
-bindsym $mod+r mode "$mode_resize"
-
-#
-# System Mode
-#
-
-set $mode_system System
-
-mode "$mode_system" {
-  bindsym e exec swaymsg exit, mode "default"
-  bindsym s exec systemctl poweroff, mode "default"
-  bindsym r exec systemctl reboot, mode "default"
-
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-  bindsym Space mode "default"
-}
-
-bindsym $mod+Shift+e mode "$mode_system"
-
-#
-# STARTUP
-#
-
-# Import environment
-
-exec systemctl --user import-environment XDG_SESSION_TYPE XDG_CURRENT_DESKTOP
-exec dbus-update-activation-environment WAYLAND_DISPLAY
-
-# Start systemd targets
-
-exec systemctl --user start sway-session.target
-exec systemctl --user start graphical-session.target
-
-# Start scratchpad terminal
-
-exec $scratchterm
-
-# Turn off monitor after 10 minutes and lock screen after 30 minutes
-
-exec swayidle -w \
-  timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-  timeout 1800 '$lock' \
-  before-sleep '$lock'
-
-# Don't turn off monitor if fullscreen
-
-for_window [class="^.*"] inhibit_idle fullscreen
-for_window [app_id="^.*"] inhibit_idle fullscreen
-
-# Start swayr daemon
-
-exec_always pkill swayrd ; env RUST_BACKTRACE=1 swayrd > /tmp/swayrd.log 2>&1
-
-# Start workspace rename script
-
-exec_always pkill sway-dynamic-workspace-names ; sway-dynamic-workspace-names > /tmp/sway-dynamic-workspace-names.log 2>&1
-
-#
-# STATUS BAR
-#
-
-bar {
-  swaybar_command waybar
-}
-
-#
-# WINDOW SPECIFIC
-#
-
-# File managers
-for_window [app_id="org.gnome.Nautilus"] floating enable
-for_window [app_id="org.kde.dolphin"] floating enable
-
-# Dialog windows
-for_window [app_id="pavucontrol"] floating enable
-for_window [app_id="pinentry-qt"] floating enable
-for_window [app_id="pinentry-gtk2"] floating enable
-
-# Terminals
-for_window [app_id="transterm"] border none
-for_window [app_id="scratchterm"] move scratchpad, floating enable, resize set 1280 720
-for_window [app_id="popupterm"] floating enable, resize set 920 720
-for_window [app_id="fuzzyterm"] floating enable, resize set 500 700
-
-#
-# GTK SETTINGS
-#
-
-set $gnome-schema org.gnome.desktop.interface
-
-exec_always {
-  gsettings set $gnome-schema gtk-theme "Nordic-v40"
-  gsettings set $gnome-schema icon-theme "Papirus-Dark"
-  gsettings set $gnome-schema cursor-theme "Quintom_Snow"
-  gsettings set $gnome-schema font-name "Input Sans Compressed 8"
-}
-
-#
-# INCLUDES
-#
-
-include colors.$colors
+/nix/store/3rszgvvx6y1scvidnkam2f0hwgsf6mij-home-manager-files/.config/sway/config
