--- a/config/wofi/config
+++ b/config/wofi/config
@@ -5,7 +5,7 @@ allow_images=true
 image_size=32px
 drun-display_generic=true
 dynamic_lines=true
-term=alacritty
+term=kitty
 insensitive=true
 prompt=
 width=500
